apps/base/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        kubernetes.io/hostname: node2
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.0.4
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "2"
          livenessProbe:
            httpGet:
              path: /
              port: webui
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: webui
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          ports:
            - containerPort: 8080
              name: webui
            - containerPort: 6881
              name: torrent-tcp
            - containerPort: 6881
              protocol: UDP
              name: torrent-udp
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: qbittorrent-downloads
              mountPath: /downloads
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads-pvc
